--- a/docs/style.css
+++ b/docs/style.css
@@ -6,7 +6,7 @@
       url('/assets/font/fira-code-webfont/FiraCode-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 @font-face {
@@ -16,7 +16,7 @@
       url('/assets/font/fira-code-webfont/FiraCode-Retina.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 @font-face {
@@ -26,7 +26,7 @@
       url('/assets/font/fira-code-webfont/FiraCode-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 @font-face {
@@ -36,7 +36,7 @@
       url('/assets/font/fira-code-webfont/FiraCode-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 @font-face {
@@ -46,7 +46,7 @@
       url('/assets/font/fira-code-webfont/FiraCode-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 @font-face {
@@ -56,7 +56,7 @@
       url('/assets/font/made-evolve-webfont/MADEEvolveSansEVO-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 @font-face {
@@ -66,7 +66,7 @@
       url('/assets/font/made-evolve-webfont/MADEEvolveSansEVO.woff') format('woff');
   font-weight: normal;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 
@@ -77,7 +77,7 @@
       url('/assets/font/made-evolve-webfont/MADEEvolveSansEVO-Thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
-  font-display: fallback;
+  font-display: swap;
 }
 
 
