--- a/docs/style.css
+++ b/docs/style.css
@@ -80,9 +80,16 @@
   font-display: swap;
 }
 
+/* Set variables */
+:root {
+  --main-black: hsla(0, 0%, 0%, 1);
+  --main-white: hsla(0, 100%, 100%, 1);
+  --main-purple: hsla(280, 80%, 45%, 1);
+}
 
 html {
   font-size: 10px;
+  font-family: 'Fira Code', "Lucida Console", Monaco, monospace;
 }
 
 /* Heading styles */
@@ -105,6 +112,20 @@ h4 {
   font-size: 2.2rem;
 }
 
+ul {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  margin: 0 1rem 0 1rem;
+}
+
+a {
+  text-decoration: none;
+  color: var(--main-black);
+}
+
 p {
   font-family: 'Fira Code', "Lucida Console", Monaco, monospace;
   text-align: center;
@@ -114,7 +135,37 @@ p {
 
 /* FRONT PAGE STYLES */
 
- /* MAIN PAGE HEADING */
+ /* MAIN PAGE HEADER SECTION*/
 #front-page-heading {
+  text-transform: uppercase;
   text-align: center;
+}
+
+#header-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+  /* Navbar */
+.horizontal-nav-bar {
+  display: flex;
+  justify-content: center;
+}
+
+.horizontal-nav-items {
+  display: flex;
+  list-style-type: none;
+}
+
+.nav-item a {
+  display: block;
+  text-transform: lowercase;
+  font-size: 1.5rem;
+  transition: color 0.2s ease-in-out, transform 0.2s ease-in-out;
+}
+
+.nav-item a:hover {
+  color: var(--main-purple);
+  transform: scale(1.05);
 }
