--- a/docs/style.css
+++ b/docs/style.css
@@ -1,85 +1,3 @@
-/* Import assets/fonts */
-@font-face {
-  font-family: 'Fira Code';
-  src: local('Fira Code Regular'), local('FiraCode-Regular'),
-      url('assets/font/fira-code-webfont/FiraCode-Regular.woff2') format('woff2'),
-      url('assets/font/fira-code-webfont/FiraCode-Regular.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: local('Fira Code Retina'), local('FiraCode-Retina'),
-      url('assets/font/fira-code-webfont/FiraCode-Retina.woff2') format('woff2'),
-      url('assets/font/fira-code-webfont/FiraCode-Retina.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: local('Fira Code Bold'), local('FiraCode-Bold'),
-      url('assets/font/fira-code-webfont/FiraCode-Bold.woff2') format('woff2'),
-      url('assets/font/fira-code-webfont/FiraCode-Bold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: local('Fira Code Medium'), local('FiraCode-Medium'),
-      url('assets/font/fira-code-webfont/FiraCode-Medium.woff2') format('woff2'),
-      url('assets/font/fira-code-webfont/FiraCode-Medium.woff') format('woff');
-  font-weight: 500;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'Fira Code';
-  src: local('Fira Code Light'), local('FiraCode-Light'),
-      url('assets/font/fira-code-webfont/FiraCode-Light.woff2') format('woff2'),
-      url('assets/font/fira-code-webfont/FiraCode-Light.woff') format('woff');
-  font-weight: 300;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'MADE Evolve Sans EVO';
-  src: local('MADE Evolve Sans EVO Bold'), local('MADEEvolveSansEVO-Bold'),
-      url('assets/font/made-evolve-webfont/MADEEvolveSansEVO-Bold.woff2') format('woff2'),
-      url('assets/font/made-evolve-webfont/MADEEvolveSansEVO-Bold.woff') format('woff');
-  font-weight: bold;
-  font-style: normal;
-  font-display: swap;
-}
-
-@font-face {
-  font-family: 'MADE Evolve Sans EVO';
-  src: local('MADE Evolve Sans EVO'), local('MADEEvolveSansEVO'),
-      url('assets/font/made-evolve-webfont/MADEEvolveSansEVO.woff2') format('woff2'),
-      url('assets/font/made-evolve-webfont/MADEEvolveSansEVO.woff') format('woff');
-  font-weight: normal;
-  font-style: normal;
-  font-display: swap;
-}
-
-
-@font-face {
-  font-family: 'MADE Evolve Sans EVO';
-  src: local('MADE Evolve Sans EVO Thin'), local('MADEEvolveSansEVO-Thin'),
-      url('assets/font/made-evolve-webfont/MADEEvolveSansEVO-Thin.woff2') format('woff2'),
-      url('assets/font/made-evolve-webfont/MADEEvolveSansEVO-Thin.woff') format('woff');
-  font-weight: 100;
-  font-style: normal;
-  font-display: swap;
-}
-
 /* Set variables */
 :root {
   --main-black: hsla(0, 0%, 0%, 1);
@@ -134,6 +52,9 @@ p {
 }
 
 /* FRONT PAGE STYLES */
+.page-section {
+  width: 100vw;
+}
 
  /* MAIN PAGE HEADER SECTION*/
 #front-page-heading {
@@ -168,4 +89,24 @@ p {
 .nav-item a:hover {
   color: var(--main-purple);
   transform: scale(1.05);
+}
+
+/* Portfolio intro section */
+#portfolio-link-section {
+  display: grid;
+  grid-template-rows: repeat(12, 1fr);
+  grid-template-columns: repeat(12, 1fr);
+
+  height: 80vh;
+  margin: 3rem 1rem 0rem 1rem;
+}
+
+.link-grid-container {
+  height: 20rem;
+
+}
+
+#dev-link-container {
+  grid-column: 2 / span 6;
+  grid-row: 2;
 }
