--- a/docs/style.css
+++ b/docs/style.css
@@ -101,12 +101,64 @@ p {
   margin: 3rem 1rem 0rem 1rem;
 }
 
-.link-grid-container {
+.link-container {
   height: 20rem;
+  min-width: 20rem;
+  max-width: 30rem;
+  text-align: center;
+}
+
+
+.link-title-block {
 
 }
 
+.link-title-block h3 {
+  padding: .5rem 0 .5rem 0;
+  border-bottom: 1px solid black;
+  margin: 0;
+
+}
+
+.link-item-container {
+  display: grid;
+  grid-template-rows: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-areas: 
+  "portfolio . skills"
+  " ......  hire ...";
+  justify-content: center;
+}
+
 #dev-link-container {
-  grid-column: 2 / span 6;
+  grid-column: 2 / span 4;
   grid-row: 2;
+
+}
+
+.link-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  height: 100%;
+  padding-top: 2rem;
+}
+
+.link-block-1 {
+  grid-area: portfolio;
+  border-left: 1px solid black;
+}
+
+.link-block-2 {
+  grid-area: skills;
+  border-right: 1px solid black;
+}
+
+.link-block-3 {
+  grid-area: hire;
+
+}
+
+.portfolio-link {
+  display: block;
 }
