--- a/docs/style.css
+++ b/docs/style.css
@@ -53,11 +53,8 @@ p {
 
 /* FRONT PAGE STYLES */
 .page-section {
-  display: grid;
-  grid-template-rows: repeat(12, 1fr);
-  grid-template-columns: repeat(12, 1fr);
-
-  width: 100vw;
+  min-width: 100vw;
+  min-height: 20vh;
 }
 
  /* MAIN PAGE HEADER SECTION*/
@@ -97,8 +94,10 @@ p {
 
 /* Portfolio intro section */
 #portfolio-link-section {
-  height: 80vh;
-  margin: 3rem 1rem 0rem 1rem;
+  display: grid;
+  grid-auto-rows: minmax(100px, 1fr);
+  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
+  height: auto;
 }
 
 .link-container {
@@ -128,8 +127,10 @@ p {
 }
 
 #dev-link-container {
-  grid-column: 2 / span 4;
-  grid-row: 2;
+  grid-column: 2;
+  grid-row: 1;
+
+  margin-top: 5rem;
 
 }
 
@@ -164,26 +165,58 @@ p {
 
 /* PORTFOLIO SECTION */
 
-.page-section-sidebar {
-  grid-column: 1 / 4;
+.portfolio-page-section {
+  display: flex;
+  
+}
 
+.page-section-sidebar {
   display: flex;
   flex-direction: column;
 
+  min-width: 15rem;
+
   background-color: hsla(0, 0%, 0%, 0.2);
 }
+
 .page-section-sidebar h2 {
   font-size: 2rem;
   text-align: center;
 }
 
-.sidebar-link-list {
-  
-  list-style: none;
+.sidebar-nav {
+  display: flex;
+  flex-direction: column;
 }
 
 .section-content-container {
-  grid-column: 4 / 13;
+  flex-basis: auto;
+  flex-grow: 1;
+
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  flex-wrap: wrap;
 
   background-color: hsla(280, 80%, 45%, 1);
+}
+
+.section-content-container h2 {
+  text-align: center;
+}
+
+.portfolio-item {
+  flex-basis: auto;
+  flex-grow: auto;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+  min-width: 150px;
+  min-height: 150px;
+
+  margin: 5px;
+  background-color: var(--main-white);
 }
