--- a/docs/style.css
+++ b/docs/style.css
@@ -94,6 +94,48 @@ p {
 }
 
 /* Portfolio intro section */
+
+.main-content-top-bar {
+  display: flex;
+  flex-direction: row;
+  min-height: 10rem;
+  background-color: var(--main-black);
+}
+
+.main-content-top-bar h2 {
+  color: white;
+  font-size: 2.5rem;
+  text-align: center
+}
+
+.top-bar-item-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background-color: pink;
+}
+.top-bar-item-list {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+
+  width: 100%;
+  background-color: yellow;
+  list-style: none;
+}
+
+.top-bar-item {
+  background-color: gray;
+  margin: .5rem;
+  padding: 20px;
+}
+.top-bar-item a {
+  color: white;
+  text-decoration: none;
+}
+
 #portfolio-link-section {
   display: grid;
   grid-auto-rows: minmax(100px, 1fr);
