--- a/docs/style.css
+++ b/docs/style.css
@@ -55,7 +55,7 @@ p {
 /* FRONT PAGE STYLES */
 .page-section {
   min-width: 100%;
-  min-height: 20vh;
+  min-height: 10vh;
 }
 
  /* MAIN PAGE HEADER SECTION*/
@@ -64,7 +64,7 @@ p {
   text-align: center;
 }
 
-#header-section {
+#main-header-section {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -93,64 +93,26 @@ p {
   transform: scale(1.05);
 }
 
-/* Portfolio intro section */
-
-.main-content-top-bar {
-  display: flex;
-  flex-direction: row;
-  min-height: 10rem;
-  background-color: var(--main-black);
-}
-
-.main-content-top-bar h2 {
-  color: white;
-  font-size: 2.5rem;
-  text-align: center
-}
-
-.top-bar-item-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  background-color: pink;
-}
-.top-bar-item-list {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  flex-wrap: wrap;
-
-  width: 100%;
-  background-color: yellow;
-  list-style: none;
-}
-
-.top-bar-item {
-  background-color: gray;
-  margin: .5rem;
-  padding: 20px;
-}
-.top-bar-item a {
-  color: white;
-  text-decoration: none;
-}
-
+/* BANNER SECTION */
 #portfolio-link-section {
-  display: grid;
+  text-align: center;
+  /* display: grid;
   grid-auto-rows: minmax(100px, 1fr);
   grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-  height: auto;
+  height: auto; */
 }
 
+.hero-block {
+  margin-top: 15vh;
+}
+
+  /* minimalist link boxes*/
 .link-container {
   height: 20rem;
   min-width: 20rem;
   max-width: 30rem;
   text-align: center;
 }
-
-
 
 .link-title-block h3 {
   padding: .5rem 0 .5rem 0;
@@ -207,29 +169,9 @@ p {
 }
 
 /* PORTFOLIO SECTION */
-
 .portfolio-page-section {
   display: flex;
-  max-width: 10vw;
-}
-
-.page-section-sidebar {
-  display: flex;
-  flex-direction: column;
-
-  min-width: 15rem;
-
-  background-color: hsla(0, 0%, 0%, 0.2);
-}
-
-.page-section-sidebar h2 {
-  font-size: 2rem;
-  text-align: center;
-}
-
-.sidebar-nav {
-  display: flex;
-  flex-direction: column;
+  margin-top: 20vh;
 }
 
 .section-content-container {
@@ -238,17 +180,75 @@ p {
   align-items: center;
   flex-wrap: wrap;
 
-  background-color: hsla(280, 80%, 45%, 1);
+  background-color: var(--main-black);
 }
 
-.main-content-container {
+/* portfolio section top bar */
+.content-selector-container {
+  justify-self: flex-start;
+  width: min-content;
 
+  display: flex;
+ 
+
+  background-color: black;
 }
 
-.section-content-container h2 {
+.content-selector-button {
+  width: 17rem;
+  margin: 0.2rem 0.3rem 0rem 0rem;
+  padding: 0.5rem;
+  border: none;
+
+  font-size: 1.5rem;
+}
+
+.section-top-bar {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  min-height: 8rem;
+
+  background-color: var(--main-black);
+}
+
+.top-bar-item-container {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 100%;
+  border-bottom: 1px dashed white;
+
+}
+.top-bar-item-list {
+  display: flex;
+
+  align-items: center;
+  flex-wrap: wrap;
+
+  width: 100%;
+  list-style: none;
+}
+
+.top-bar-item-container p {
+  color: white;
+}
+
+.top-bar-item {
+  background-color: gray;
+  margin: .5rem;
   text-align: center;
+  min-width: 5rem;
+  min-height: 5rem;
 }
 
+.top-bar-item a {
+  color: white;
+  text-decoration: none;
+}
+
+/* portfolio items */
 .portfolio-item {
 
   display: flex;
@@ -264,8 +264,6 @@ p {
   margin: 5px;
   background-color: var(--main-white);
 }
-
-
 
 /* CONTACT SECTION */
 #contact-section h2 {
