--- a/docs/style.css
+++ b/docs/style.css
@@ -183,8 +183,6 @@ p {
   display: block;
 }
 
-
-
 /* PORTFOLIO SECTION */
 .portfolio-page-section {
   display: flex;
@@ -196,9 +194,12 @@ p {
   justify-content: space-evenly;
   align-items: center;
   flex-wrap: wrap;
+  
+  padding: 1.5rem 2rem 2rem 2rem;
 
   background-color: var(--main-black);
 }
+
 
 /* portfolio section top bar */
 .content-selector-container {
@@ -207,7 +208,6 @@ p {
 
   display: flex;
  
-
   background-color: black;
 }
 
@@ -226,20 +226,23 @@ p {
   flex-wrap: wrap;
   min-height: 8rem;
 
+  margin-right: 2rem;: 
+
   background-color: var(--main-black);
 }
 
-.top-bar-item-container {
-  display: flex;
+.top-bar-item-container p {
+  padding: 0;
+  margin: 1rem 0 1rem 0;
 
-  width: 100%;
-  border-bottom: 1px dashed white;
-
+  font-size: 3rem;
 }
+
 .top-bar-item-list {
   display: flex;
 
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
 
   width: 100%;
@@ -250,11 +253,13 @@ p {
   color: white;
 }
 
+
 .top-bar-item {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+
   background-color: hsla(0, 0%, 50%, 0.3);
   padding: .5rem;
   margin: .5rem;
@@ -283,13 +288,14 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  flex-grow: 0.5;
 
   min-width: 0;
   min-height: 0;
   width: 20rem;
   height: 20rem;
 
-  margin: 5px;
+  margin: 1rem;
   background-color: var(--main-white);
 }
 
