--- a/docs/style.css
+++ b/docs/style.css
@@ -73,7 +73,7 @@ p {
   align-items: center;
 }
 
-  /* Navbar */
+  /* top navbar */
 .horizontal-nav-bar {
   display: flex;
   justify-content: center;
@@ -101,7 +101,7 @@ p {
   transform: scale(1.05);
 }
 
-/* BANNER SECTION */
+/* TOP BANNER SECTION */
 #portfolio-link-section {
   display: flex;
   flex-direction: column;
@@ -109,10 +109,6 @@ p {
   justify-content: space-between;
   min-height: 75vh;
   height: 42rem;
-  /* display: grid;
-  grid-auto-rows: minmax(100px, 1fr);
-  grid-template-columns: repeat(auto-fill, minmax(50px, 1fr));
-  height: auto; */
 }
 
 .hero-block {
@@ -307,10 +303,10 @@ p {
   text-decoration: none;
 }
 
-.external-link-item .social-item-link .socicon {
+.social-icon {
   font-size: 4rem;
-  color: var(--main-white);
   margin: .5rem;
+  color: white;
 }
 
 /* portfolio items */
@@ -382,6 +378,7 @@ p {
   grid-template-areas: 
   "nav content";
 
+  min-height: 95vh;
   color: white;
 }
 
@@ -469,7 +466,12 @@ p {
 
 /* CONTACT SECTION */
 .contact-page-section {
+  display: flex;
+  flex-direction: column;
+  align-items: space-between;
+
   padding-bottom: 2rem;
+  min-height: 90vh;
 }
 
 .section-container {
