--- a/docs/style.css
+++ b/docs/style.css
@@ -61,6 +61,28 @@ p {
 
 }
 
+.action-button {
+  padding: 1rem;
+  background-color: black;
+  color: white;
+  border-width: 0px;
+  border-radius: 1rem;
+}
+
+code {
+  display: inline-block;
+  width: 100%;
+  padding: 1rem;
+  font-family: 'Courier New', Courier, monospace;
+  background-color: lightgray;
+  word-wrap; break-word;
+  white-space: pre-wrap;
+}
+
+.hr {
+  border-bottom: 1px solid black;
+}
+
  /* MAIN PAGE HEADER SECTION*/
 #front-page-heading {
   text-transform: uppercase;
@@ -363,7 +385,7 @@ p {
 /* ABOUT ME */
 
 .about-page-section {
-  background-color: black;
+  background-color: gray;
 }
 
 .about-header {
@@ -414,8 +436,6 @@ p {
 
 .about-content {
   grid-area: content;
-  border-top: 2px dashed white;
-
 }
 
 .about-img-container {
@@ -512,11 +532,16 @@ p {
   color: black;
 }
 
+.form-submit-button {
+ text-align: center;
+}
+
 #more-contacts {
   display: flex; 
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  flex-basis: 50%;
 }
 
 #social-contacts .social-item-link span{
@@ -529,21 +554,39 @@ p {
 
 .key-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
 
-  width: 100%;
-  height: 3rem;
-
+  padding: 2rem;
+  border-radius: 1rem;
   background-color: gray;
 }
 
 .key-header {
   font-size: 2rem;
+  margin: 0 auto 0 auto;
+  padding: 0;
+}
+
+.key-header h4 {
+  margin: 0 0 1rem 0;
+  padding: 0;
+}
+
+.key-fingerprint {
+  width: 100%;
+  overflow-x: hidden;
 }
 
 .key-body {
-  display: none;
+  max-height: 20rem;
+  width: 100%;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  user-select: all;
+  word-wrap: break-word;
+  text-align: left;
 }
 
 #social-contacts .external-link-item {
