--- a/docs/style.css
+++ b/docs/style.css
@@ -227,6 +227,8 @@ code {
 /* PORTFOLIO SECTION */
 .portfolio-page-section {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   padding-top: 1vh;
 }
 
@@ -338,11 +340,11 @@ code {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  flex-grow: 0.5;
+  flex-grow: 1;
 
   min-width: 0;
   min-height: 0;
-  width: 20rem;
+  width: 25rem;
   height: auto;
 
   padding-top: 1rem;
@@ -380,6 +382,12 @@ code {
 
   font-size: 1.8rem;
   background-color: hsla(0, 0%, 0%, 0.2);
+}
+
+#portfolio-scroll-container {
+  height: 100vw;
+  color: white;
+  background-color: black;
 }
 
 /* ABOUT ME */
